# fuck-saas

./: .gitignore  README.md
f-lack/: .env  Cargo.toml  f_lack_development_db_init.sh  f_lack_release_build.sh  readme.md
f-lack/db/: flack.db
f-lack/migrations/: 20240131000000_initial.sql
f-lack/public/: flack.css
f-lack/src/: channel.rs  components.rs  endpoints.rs  error_template.rs  fileserv.rs  main.rs  pages.rs  user.rs
f-lack/src/auth/: auth.rs
f-lack/src/channel/: channel.rs
f-lack/src/components/: chat_area.js  chat_area.rs  header_menu.rs  page_shell.rs  sidebar.rs
f-lack/src/endpoints/: channel_create.rs  channel_delete.rs  message_create.rs  message_delete.rs  message_edit.rs  message_poll.rs
f-lack/src/message/: message.rs
f-lack/src/pages/: channel_page.rs  chat.rs  home.rs  settings.rs
f-lack/src/user/: user.rs
f-lack/styles/: main.css
website/: index.html
